Paricipant self-ranking clarification

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -117,7 +117,7 @@
                 </p>
                 <h2>How?</h2>
                 <p>
-                    Each reviewer will be presented with a randomly sorted list of all submissions to sort (from favorite to least-favorite). The average rank of each package (after automatic penalties) determines its final score.<br><br>
+                    Each reviewer will be presented with a randomly sorted list of all submissions to sort (from favorite to least-favorite). The average rank of each package (after automatic penalties) determines its final score. Jam participants can rank every package aside from their own.<br><br>
                     Rankings from members who have received <em>10 or more total "helpful review" points</em> on ContentDB (or have the <code>Editor</code> rank or higher) will have an <strong>added 10% weight</strong>. These are sort of like "mini-judges".<br><br>
                     Badges will also be provided to be assigned to your favorite games for 6 categories: <em>Most Innovative, Most Fun, Best Graphics, Best Audio, Best Humor, and Best Mood</em>. Packages with the most of a badge will be considered the winner in that category (for glory).
                 </p>
