Fix meta title property

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -8,7 +8,7 @@
     <title>2024 Luanti GAME JAM</title>
     <link rel="icon" href="https://raw.githubusercontent.com/minetest/minetest.github.io/master/media/icon.svg">
 
-    <meta property="og:title" content="2024 Minetest GAME JAM" />
+    <meta property="og:title" content="2024 Luanti GAME JAM" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://jam.minetest.net/img/banner.png" />
     <meta property="og:url" content="https://jam.minetest.net" />
