--- a/site/public/index.html
+++ b/site/public/index.html
@@ -10,8 +10,8 @@
 
     <meta property="og:title" content="2024 Luanti GAME JAM" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://jam.minetest.net/img/banner.png" />
-    <meta property="og:url" content="https://jam.minetest.net" />
+    <meta property="og:image" content="https://jam.luanti.org/img/banner.png" />
+    <meta property="og:url" content="https://jam.luanti.org" />
     <meta name="theme-color" content="#688479">
     <meta name="twitter:card" content="summary_large_image" />
 
