--- a/site/public/index.html
+++ b/site/public/index.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#688479">
     <meta name="twitter:card" content="summary_large_image" />
 
+    <link rel="stylesheet" href="global.css?v=2">
     <link rel="stylesheet" href="index.css?v=2">
 </head>
 <body>
@@ -25,6 +26,7 @@
                 <li><a href="#rules">RULES</a></li>
                 <li><a href="#scoring">SCORING</a></li>
                 <li><a href="#prizes">PRIZES</a></li>
+                <li><a href="/resources" class="important">RESOURCES</a></li>
                 <!-- <li><a href="/rating" class="important">RATING</a></li> -->
             </ul>
             <a href="#">
@@ -44,6 +46,18 @@
                 <div id="timer">
                     <div id="clock"></div>
                     <div id="next-event"></div>
+                </div>
+            </div>
+            <div id="info" class="content">
+                <div id="info-details">
+                    <div class="detail">
+                        <h2>Version</h2>
+                        <p>5.10.0 <a href="https://forum.minetest.net/viewtopic.php?t=31095">release candidate 1</a> is out, and the full release should be out mid-jam. Feel free to use it.</p>
+                    </div>
+                    <div class="detail">
+                        <h2>Resources</h2>
+                        <p>Want game ideas or development resources? Assets, libraries, and more? Check out <a href="/resources">this page</a>.</p>
+                    </div>
                 </div>
             </div>
             <div id="schedule" class="content">
