--- a/site/public/resources/index.html
+++ b/site/public/resources/index.html
@@ -8,7 +8,7 @@
     <title>2024 Luanti GAME JAM Resources</title>
     <link rel="icon" href="https://raw.githubusercontent.com/minetest/minetest.github.io/master/media/icon.svg">
 
-    <meta property="og:title" content="2024 Luanti GAME JAM" />
+    <meta property="og:title" content="2024 Luanti GAME JAM Resources" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://jam.luanti.org/img/banner.png" />
     <meta property="og:url" content="https://jam.luanti.org/resources" />
@@ -37,7 +37,10 @@
 
         <div id="main">
             <h1>Development Resources</h1>
-            <p>This page is a <strong class="important">WORK IN PROGRESS</strong>. Links may be broken or duplicate. Tags, sorting, and better formatting to come.</p>
+            <p>
+                This page is a <strong class="important">WORK IN PROGRESS</strong>. Links may be broken or duplicate. Tags, sorting, and better formatting to come.<br>
+                Most resources should be freely licensed, but it is not currently guaranteed.
+            </p>
             <table id="resources">
                 <thead><tr><th title="Field #2">Title</th>
                 <th title="Field #1">URL</th>
