--- a/site/public/index.html
+++ b/site/public/index.html
@@ -181,17 +181,18 @@
                 <h1>Prizes</h1>
                 <p>Each winner starting from 1st place may choose one (or none) prize from each of the following pools. Selection moves down the ranked list until each prize has been claimed. Winners may choose to give claimed promo codes to someone else.</p>
                 <div class="prize">
-                    <p class="prize-title">Shirts</p>
+                    <h3 class="prize-title">Shirts</h3>
                     <div id="shirts">
                         <img src="img/shirt_1.jpg">
                         <img src="img/shirt_2.jpg">
                         <img src="img/shirt_3.jpg">
                     </div>
+                    <p>Merch sponsored by <a href="https://github.com/mrcrilly">Michael Crilly</a></p>
                     <sub>Limit 3 winners. Products shown are examples and not final.<br>A private storefront* with 100% off promo code will be provided.</sub>
                 </div>
                 <div class="prize">
                     <img src="https://pinehosting.com/img/logo/logo2.webp">
-                    <p class="prize-title">Offers from <a href="https://pinehosting.com/minetest" target="_blank">Pine Hosting</a></p>
+                    <h3 class="prize-title">Offers from <a href="https://pinehosting.com/minetest" target="_blank">Pine Hosting</a></h3>
                     <ul>
                         <li><strong>3 months</strong>, <strong>2 months</strong>, or <strong>1 month</strong> of free <a href="https://pinehosting.com/minetest">Luanti hosting</a></li>
                         <li><strong>1 month</strong> of free <a href="https://pinehosting.com/dedicated-server/ryzen-7900">dedicated Ryzen 7900 server hosting</a></li>
