Add more game idea generators

--- a/site/public/resources/index.html
+++ b/site/public/resources/index.html
@@ -51,6 +51,14 @@
                     <td><a href="https://itssnowyowl.itch.io/game-idea-generator">https://itssnowyowl.itch.io/game-idea-generator</a></td>
                     </tr>
                     <tr>
+                    <td><strong>Let's Make a Game Idea Generator</strong></td>
+                    <td><a href="https://letsmakeagame.net/game-idea-generator/">https://letsmakeagame.net/game-idea-generator/</a></td>
+                    </tr>
+                    <tr>
+                    <td><strong>Simple Game Idea Generator</strong></td>
+                    <td><a href="https://firith.studio/game-idea-generator">https://firith.studio/game-idea-generator</a></td>
+                    </tr>
+                    <tr>
                     <td><strong>Luanti Library and API mods</strong></td>
                     <td><a href="https://content.luanti.org/packages/?type=mod&page=1&tag=library">https://content.luanti.org/packages/?type=mod&page=1&tag=library</a></td>
                     </tr>
