Add more game idea prompts

--- a/site/public/resources/index.html
+++ b/site/public/resources/index.html
@@ -36,11 +36,41 @@
         </nav>
 
         <div id="main">
-            <h1>Development Resources</h1>
             <p>
                 This page is a <strong class="important">WORK IN PROGRESS</strong>. Links may be broken or duplicate. Tags, sorting, and better formatting to come.<br>
                 Most resources should be freely licensed, but it is not currently guaranteed.
             </p>
+            <h1>Game Ideas</h1>
+            <p>
+                Check the Resources section for idea generators, but here's some other prompts to help you get started.
+            </p>
+            <ul>
+                <li>Defend the town</li>
+                <li>Top-down puzzle</li>
+                <li>Complete quests</li>
+                <li>Where did everyone go?</li>
+                <li>Find secrets in the city</li>
+                <li>From the perspective of something else</li>
+                <li>The world responds to you</li>
+                <li>Everything is made of ...</li>
+                <li>Don't go too far</li>
+                <li>Prevent the growth of something</li>
+                <li>Solve a mystery</li>
+                <li>Point and click</li>
+                <li>Navigate extraterrestrial conflict</li>
+                <li>Stay in line</li>
+                <li>Talk to everyone</li>
+                <li>Everything is falling apart</li>
+                <li>Choose a path</li>
+                <li>Protect the payload</li>
+                <li>You are the bad guy</li>
+                <li>Visual novel about history</li>
+                <li>A humorous screenplay</li>
+                <li>Cast spells using connected runes</li>
+                <li>Help your team win</li>
+                <li>Race using a card game</li>
+            </ul>
+            <h1>Development Resources</h1>
             <table id="resources">
                 <thead><tr><th title="Field #2">Title</th>
                 <th title="Field #1">URL</th>
