Fix resources nav

--- a/site/public/resources/index.html
+++ b/site/public/resources/index.html
@@ -44,7 +44,7 @@
             <p>
                 Check the Resources section for idea generators, but here's some other prompts to help you get started.
             </p>
-            <ul>
+            <ul id="ideas">
                 <li>Defend the town</li>
                 <li>Top-down puzzle</li>
                 <li>Complete quests</li>
