Module name clarification

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -102,7 +102,7 @@
                     <li>AI-generated content (code, media, etc) is <strong>not allowed</strong>, see previous item</li>
                     <li>Boilerplate is fine, but existing games should not be used as a base</li>
                     <li>Games must be able to run on the latest version of Luanti (5.10.0, if released by November)</li>
-                    <li>Non-library modules must use the <code>gamename_modname</code> name convention (and everything must follow the <a href="https://content.minetest.net/policy_and_guidance/#31-right-to-a-name" target="_blank">Right to a Name policy</a>)</li>
+                    <li>First-party modules must use the <code>gamename_modname</code> name convention (unmodified third-party modules may keep their name, see also <a href="https://content.minetest.net/policy_and_guidance/#31-right-to-a-name" target="_blank">Right to a Name policy</a>)</li>
                 </ul>
                 <h1>Submission Process</h1>
                 <ul>
