--- a/site/public/index.html
+++ b/site/public/index.html
@@ -99,7 +99,7 @@
                 <h1>Content Rules</h1>
                 <ul>
                     <li>All gameplay must be original and created during the development timeframe</li>
-                    <li>Games must comply with <a href="https://content.minetest.net/policy_and_guidance/" target="_blank">ContentDB policies</a></li>
+                    <li>Games must comply with <a href="https://content.luanti.org/policy_and_guidance/" target="_blank">ContentDB policies</a></li>
                     <li><em>Freely-licensed</em> libraries and assets from third-parties may be used (and is encouraged!)</li>
                     <li>AI-generated content (code, media, etc) is <strong>not allowed</strong>, see previous item</li>
                     <li>Boilerplate is fine, but existing games should not be used as a base</li>
@@ -108,7 +108,7 @@
                 </ul>
                 <h1>Submission Process</h1>
                 <ul>
-                    <li>Submit games to <a href="https://content.minetest.net/">ContentDB</a> using the <code>Jam / Game 2024</code> tag</li>
+                    <li>Submit games to <a href="https://content.luanti.org/">ContentDB</a> using the <code>Jam / Game 2024</code> tag</li>
                     <li>Games must be submitted <strong>and approved</strong> BEFORE the approval window closes (late submissions will be denied)</li>
                     <li>You can technically finish your game in the last 24 hours of the approval window, you just risk losing approval time</li>
                     <li>Games may be submitted for approval at any time within the approval window (Nov 1 - 23); Earlier is better</li>
@@ -178,7 +178,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <p>For more details, please review the <a href="https://github.com/GreenXenith/minetestgamejam/blob/master/2024/PLANNING.md#scoring" target="_blank">planning document</a>.</p>
+                <p>For more details, please review the <a href="https://github.com/GreenXenith/luantigamejam/blob/master/2024/PLANNING.md#scoring" target="_blank">planning document</a>.</p>
             </div>
             <div id="prizes" class="content">
                 <h1>Prizes</h1>
@@ -203,16 +203,16 @@
                     <sub>Limit 4 winners. Each offer only claimable once. Promo code for the chosen offer will be provided.</sub>
                 </div>
                 <div class="prize">
-                    <p>Promotion on the front page of <a href="https://content.minetest.net/">ContentDB</a></p>
+                    <p>Promotion on the front page of <a href="https://content.luanti.org/">ContentDB</a></p>
                     <sub>Limit 3 winners. Not optional.</sub>
                 </div>
                 <h2>Disclaimer</h2>
                 <p>*Merchandise is manufactured and shipped by <a href="https://www.printful.com/">Printful</a>. Printful ships to <a href="https://help.printful.com/hc/en-us/articles/360014066779-Is-Printful-available-in-all-countries">most countries</a>. More handling details soon.</p>
             </div>
             <div id="footer" class="content">
-                <span>&copy; 2022-2024 <a href="https://www.minetest.net/" target="_blank">The Luanti Team</a></span>
+                <span>&copy; 2022-2024 <a href="https://www.luanti.org/" target="_blank">The Luanti Team</a></span>
                 <span>Website by <a href="https://www.greenxenith.com/" target="_blank">GreenXenith</a></span>
-                <span><a href="https://forum.minetest.net/viewtopic.php?t=31059" target="_blank">Forum Thread</a></span>
+                <span><a href="https://forum.luanti.org/viewtopic.php?t=31059" target="_blank">Forum Thread</a></span>
             </div>
         </div>
     </div>
