More time clarification

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -110,7 +110,7 @@
                 <ul>
                     <li>Submit games to <a href="https://content.luanti.org/">ContentDB</a> using the <code>Jam / Game 2024</code> tag</li>
                     <li>Games must be submitted <strong>and approved</strong> BEFORE the approval window closes (late submissions will be denied)</li>
-                    <li>You can technically finish your game in the last 24 hours of the approval window, you just risk losing approval time</li>
+                    <li>You can technically finish and modify your game til the end of the approval window, you just risk losing approval time</li>
                     <li>Games may be submitted for approval at any time within the approval window (Nov 1 - 23); Earlier is better</li>
                     <li>Groups/teams may participate (all members must be included in the <code>Maintainers</code> ContentDB field)</li>
                     <li>Participants may have multiple submissions</li>
