Remove testing, disabled until rating time

--- a/site/public/rating/index.html
+++ b/site/public/rating/index.html
@@ -22,9 +22,7 @@
         <a id="logout" class="hidden" href="">Log Out</a>
     </nav>
 
-    <style>#status {background-color: red;}</style>
-    <span id="status"><span id="info">TESTING MODE</span><span id="status-msg"></span></span>
-    <!-- <span id="status"><span id="info">Log in to save changes.</span><span id="status-msg"></span></span>  -->
+    <span id="status"><span id="info">Log in to save changes.</span><span id="status-msg"></span></span>
 
     <h2 id="header-most">&#x1f4a1;&#xFE0F; Log In to Sort Packages</h2>
     <div id="packages"></div>
