--- a/site/public/index.html
+++ b/site/public/index.html
@@ -45,12 +45,37 @@
 
         <div id="main">
             <div id="countdown">
-                <div id="timer">
+                <div id="winners">
+                    <h2>Winners</h2>
+                    <div>
+                        <a href="" target="_blank" class="package" data-place="2nd" data-id="regulus/regulus_mtgj2024">
+                            <h2>The Library</h2>
+                            <img src="">
+                        </a>
+                        <a href="" target="_blank" class="package" data-place="1st" data-id="Sumianvoice/extra_ordinance" data-best="🎮💡" title="Most Fun and Most Innovative">
+                            <h2>Extra Ordinance</h2>
+                            <img src="">
+                        </a>
+                        <a href="" target="_blank" class="package" data-place="3rd" data-id="Wuzzy/eyeballs" data-best="🌧️" title="Best Mood">
+                            <h2>Eyeballs</h2>
+                            <img src="">
+                        </a>
+                    </div>
+                    <h3>RUNNER-UPS</h3>
+                    <p id="runnerups">
+                        <a data-tooltip="5th" href="https://content.luanti.org/packages/jgordon510/sokoblox_game/" target="_blank">sokoblox</a>
+                        <a data-tooltip="4th" href="https://content.luanti.org/packages/Signal_/artifact/" target="_blank" data-best="🎨" title="Best Art/Media">Artifact</a>
+                        <a data-tooltip="6th" href="https://content.luanti.org/packages/Nathan.S/kobo/" target="_blank">Koboldkrieg</a>
+                    </p>
+                    <p>At least 4 winners will receive prizes!</p>
+                    <a target="_blank" href="https://docs.google.com/spreadsheets/d/1Eoyp5zOossV9e-YY6M6pq7bDgGot_OqEAzhihSR_2fk/edit?usp=sharing">Results Spreadsheet</a>
+                </div>
+                <!--<div id="timer">
                     <div id="clock"></div>
                     <div id="next-event"></div>
-                </div>
+                </div>-->
             </div>
-            <div id="info" class="content">
+            <!--<div id="info" class="content">
                 <div id="info-details">
                     <div class="detail">
                         <h2>Version</h2>
@@ -61,7 +86,7 @@
                         <p>Want game ideas or development resources? Assets, libraries, and more? Check out <a href="/resources">this page</a>.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div id="schedule" class="content">
                 <h1>Schedule</h1>
                 <table>
