--- a/site/public/index.html
+++ b/site/public/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LUANTI GAME JAM</title>
+
+    <title>2025 Luanti GAME JAM</title>
+    <link rel="icon" href="img/logo.svg">
+
+    <meta property="og:title" content="2025 Luanti GAME JAM" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jam.luanti.org" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <link rel="stylesheet" href="index.css?v=2">
+
+    <script src="index.js"></script>
 </head>
 <body>
-    This page is temporary. Luanti is forever.
+    <div id="content">
+        <img id="logo" src="img/banner.svg" width="1024" height="1024">
+        <div id="clock">99.99:99:99</div>
+        <div id="next-event"></div>
+    </div>
 </body>
 </html>
