--- a/site/public/index.html
+++ b/site/public/index.html
@@ -20,6 +20,12 @@
 <body>
     <div id="hero">
         <img id="logo" src="img/banner.svg" width="1024" height="1024">
+
+        <div id="theme">
+            <h1>Theme</h1>
+            <p>“Line of Sight”</p>
+        </div>
+        
         <div id="clock"></div>
         <div id="next-event"></div>
     </div>
@@ -32,6 +38,7 @@
             <li>Games must comply with <a href="https://content.luanti.org/policy_and_guidance/" target="_blank">ContentDB policies</a>, including the <a href="https://content.luanti.org/policy_and_guidance/#33-game-mod-namespacing">namespacing</a> and <a href="https://content.luanti.org/help/copyright/#i-used-an-ai">AI</a> policies.</li>
             <li>Games must be submitted to <a href="https://content.luanti.org/">ContentDB</a> using the <code>Jam / Game 2025</code> tag and approved before the rating period.</li>
             <li>Groups/teams may participate (all members must be included in the <code>Maintainers</code> ContentDB field).</li>
+            <li>Games will be ranked by the community using sorted ranking (like last year).</li>
         </ul>
         <table>
             <thead>
