--- a/site/public/index.html
+++ b/site/public/index.html
@@ -13,7 +13,8 @@
     <meta property="og:url" content="https://jam.luanti.org" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <link rel="stylesheet" href="index.css?v=2">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="index.css">
 
     <script src="index.js"></script>
 </head>
