Remove testing banner

--- a/site/public/rating/index.html
+++ b/site/public/rating/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="testing" id="content">
+    <div id="content">
         <nav>
             <a id="return" href="/"><img alt="icon" src="../img/logo.svg"></a>
             <span id="status"><span id="info">Log in to save changes.</span><span id="status-msg"></span></span>
