--- a/site/public/index.html
+++ b/site/public/index.html
@@ -26,6 +26,8 @@
             <h1>Theme</h1>
             <p>“Line of Sight”</p>
         </div>
+
+        <a href="/rating">▶ RATE GAMES ◀</a>
         
         <div id="clock"></div>
         <div id="next-event"></div>
