--- a/site/public/index.html
+++ b/site/public/index.html
@@ -20,17 +20,39 @@
 </head>
 <body>
     <div id="hero">
-        <img id="logo" src="img/banner.svg" width="1024" height="1024">
+        <img id="logo" src="img/banner.svg" alt="Game Jam Logo" width="1024" height="1024">
 
         <div id="theme">
             <h1>Theme</h1>
             <p>“Line of Sight”</p>
         </div>
 
-        <a href="/rating">▶ RATE GAMES ◀</a>
+        <!--
+            <a href="/rating">▶ RATE GAMES ◀</a>
         
-        <div id="clock"></div>
-        <div id="next-event"></div>
+            <div id="clock"></div>
+            <div id="next-event"></div>
+        -->
+
+
+        <div id="winners">
+            <h2>Winners</h2>
+            <div>
+                <a href="" target="_blank" class="package" data-place="2nd" data-id="Just_Visiting/agent_x">
+                    <h2>Agent X</h2>
+                    <img src="">
+                </a>
+                <a href="" target="_blank" class="package" data-place="1st" data-id="Wuzzy/cow">
+                    <h2>C.O.W.</h2>
+                    <img src="">
+                </a>
+                <a href="" target="_blank" class="package" data-place="3rd" data-id="Pixelo789/thinkingwitharrows">
+                    <h2>Thinking With Arrows</h2>
+                    <img src="">
+                </a>
+            </div>
+            <a target="_blank" href="https://docs.google.com/spreadsheets/d/1WXJrwhM-7nTR7TwRcHnpzhiVx1dpwFpwCFQyXKM6DsQ/edit?usp=sharing">Results Spreadsheet</a>
+        </div>
     </div>
     <div id="details" class="content">
         <p>
